src/vulkan/overlay-layer/overlay.cpp
@@ -25,13 +25,13 @@
 #include <stdlib.h>
 #include <assert.h>
 
-#include <vk_loader_platform.h>
 #include <vulkan/vulkan.h>
-#include <vk_dispatch_table_helper.h>
+#include <vulkan/vk_dispatch_table_helper.h>
 #include <vulkan/vk_layer.h>
-#include "vk_layer_data.h"
+#include <vulkan/vk_layer_data.h>
+#include <vulkan/vk_layer_extension_utils.h>
+#include <vulkan/vk_loader_platform.h>
 #include "vk_layer_table.h"
-#include "vk_layer_extension_utils.h"
 
 #include "imgui.h"
 
